--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_PORT=3307
+DB_DATABASE=sistema_compras
 DB_USERNAME=root
 DB_PASSWORD=
 
