--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
+        "uxweb/sweet-alert": "^2.0",
         "ybr-nx/laravel-mariadb": "^1.0"
     },
     "require-dev": {
